work page branding popup update

--- a/work.html
+++ b/work.html
@@ -447,7 +447,8 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/AussieHomeBaker/Aussiebaker-03.jpg" onclick="openWorkModal(event)" alt="thunivu"
+                    <img src="/branding/AussieHomeBaker/Aussiebaker-03.jpg" onclick="openWorkModal(event, 5)"
+                        alt="Aussiebaker"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Aussiebaker</h3>
@@ -458,7 +459,8 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/BrickHouse/BRICK-house-02.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/BrickHouse/BRICK-house-02.jpg" onclick="openWorkModal(event, 3)"
+                        alt="Brick House"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Brick House</h3>
@@ -469,7 +471,7 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/KolliHills/kolli-01.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/KolliHills/kolli-01.jpg" onclick="openWorkModal(event, 1)" alt="Kolli Hills"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Kolli Hills</h3>
@@ -480,7 +482,7 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/Kraken/kraken-1.jpg" onclick="openWorkModal(event, 4)" alt="kraken"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">kraken</h3>
@@ -491,7 +493,7 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/TheRoute/ROUTE-03.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/TheRoute/ROUTE-03.jpg" onclick="openWorkModal(event, 7)" alt="Route"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">The Route</h3>
@@ -501,7 +503,7 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/Stoker/stoker-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/Stoker/stoker-1.jpg" onclick="openWorkModal(event, 8)" alt="Stroker"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Stroker</h3>
@@ -511,7 +513,7 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/TDKF/TDKF-4.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/TDKF/TDKF-4.jpg" onclick="openWorkModal(event, 2)" alt="TDKF"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">TDKF</h3>
@@ -521,7 +523,7 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/branding/PlanMonk/3.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/PlanMonk/3.jpg" onclick="openWorkModal(event, 6)" alt="Plan Monk"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Plan Monk</h3>
@@ -920,25 +922,20 @@
 
             <div class="p-6">
                 <div class="flex justify-between items-start">
-                    <h2 class="text-2xl font-bold">Lorem ipsum is placeholder text commonly used</h2>
+                    <h2 class="text-2xl font-bold" id="details-pop-header"></h2>
                 </div>
 
-                <p class="text-gray-600 mt-2 ">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum.
+                <p class="text-gray-600 mt-2" id="details-pop-desc">
                 </p>
             </div>
 
-            <div class="space-y-8 px-6 pb-6">
-                <img src="/FINAL/BrickHouse/BRICK-house-02.jpg"
+            <div class="space-y-8 px-6 pb-6" id="details-pop-img-contents">
+                <!-- <img src="/FINAL/BrickHouse/BRICK-house-02.jpg"
                     class="w-full h-auto rounded-md cursor-zoom-in transition group-hover:opacity-90 min-h-[400px] object-cover sm:min-h-0 sm:object-contain"
-                    alt="branding image" onclick="openFullscreenImage('/FINAL/BrickHouse/BRICK-house-02.jpg')" />
-                <img src="/FINAL/BrickHouse/BRICK-house-01.jpg"
+                    alt="branding image" onclick="openFullscreenImage('/FINAL/BrickHouse/BRICK-house-02.jpg')" /> -->
+                <!-- <img src="/FINAL/BrickHouse/BRICK-house-01.jpg"
                     class="w-full h-auto rounded-md cursor-zoom-in transition group-hover:opacity-90 min-h-[400px] object-cover sm:min-h-0 sm:object-contain"
-                    alt="branding image" onclick="openFullscreenImage('/FINAL/BrickHouse/BRICK-house-01.jpg')">
+                    alt="branding image" onclick="openFullscreenImage('/FINAL/BrickHouse/BRICK-house-01.jpg')"> -->
             </div>
         </div>
     </div>
@@ -996,7 +993,7 @@
                 Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
                 volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
                 non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
-                imageSources: ['/branding/PlanMonk/1.jpg', '/branding/PlanMonk/2.jpg', '/branding/PlanMonk/3.jpg', '/branding/PlanMonk/4.jpg', '/branding/PlanMonk/5.jpg', '/branding/PlanMonk/6.jpg',  '/branding/PlanMonk/7.jpg']
+                imageSources: ['/branding/PlanMonk/1.jpg', '/branding/PlanMonk/2.jpg', '/branding/PlanMonk/3.jpg', '/branding/PlanMonk/4.jpg', '/branding/PlanMonk/5.jpg', '/branding/PlanMonk/6.jpg', '/branding/PlanMonk/7.jpg']
             },
             {
                 id: 7,
@@ -1012,21 +1009,48 @@
                 volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
                 non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
                 imageSources: ['/branding/Stoker/stoker-1.jpg', '/branding/Stoker/stoker-2.jpg', '/branding/Stoker/stoker-3.jpg', '/branding/Stoker/stoker-4.jpg']
+            },
+            {
+                id: 9,
+                title: 'Lorem ipsum is placeholder text commonly used',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/AussieHomeBaker/Aussiebaker-00.jpg', '/branding/AussieHomeBaker/Aussiebaker-01.jpg', '/branding/AussieHomeBaker/Aussiebaker-02.jpg', '/branding/AussieHomeBaker/Aussiebaker-03.jpg']
             }
         ];
         let locoScrollInstance;
         const workPopup = document.getElementById("work-details-popup");
         const closeWorkPopup = document.getElementById("closePopup");
         const closPopupButtonWrapper = document.getElementById("close-popup-button-wrapper");
-
+        const detailsHeader = document.getElementById("details-pop-header");
+        const detailsImageSrc = document.getElementById("details-pop-img-contents");
+        const detailsPopupDescription = document.getElementById("details-pop-desc");
         // Function to open the modal
-        const openWorkModal = (event) => {
+        const openWorkModal = (event, id = 9) => {
             // Prevent default behavior of the anchor tag
             if (event) {
                 event.preventDefault();
             }
+            const data = workDetails.filter((i) => { return i.id == id })[0];
+            detailsHeader.textContent = data.title;
+            detailsPopupDescription.textContent = data.desc;
+
+            detailsImageSrc.innerHTML = '';
+            // Append new images based on the `imageSources` array
+            data.imageSources.forEach((src) => {
+                const imgElement = document.createElement('img');
+                imgElement.src = src;
+                imgElement.alt = data.title; // Set alt text to the title for accessibility
+                imgElement.className = 'w-full h-auto rounded-md cursor-zoom-in transition group-hover:opacity-90 min-h-[400px] object-cover sm:min-h-0 sm:object-contain';
+                imgElement.onclick = () => openFullscreenImage(src);
+                detailsImageSrc.appendChild(imgElement);
+            });
+
             // Show the popup
             const modalContent = workPopup.querySelector("div.relative");
+
             workPopup.classList.remove("hidden");
             closeWorkPopup.classList.remove('hidden');
             closPopupButtonWrapper.classList.remove('hidden');
