remove hover team page

--- a/team.html
+++ b/team.html
@@ -277,13 +277,13 @@
 
                 <div class="absolute top-[-5rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[102px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
 
 
@@ -293,83 +293,83 @@
                 <div
                     class="absolute top-[-4.75rem] left-auto right-[-35px] sm:left-[calc(50%-70px)] sm:right-auto transform -translate-y-2 text-left sm:text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                     <!-- <div class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300"> -->
-                    <p class="text-sm font-bold text-gray-700">Person 1</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-700">Person 1</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
                 <div class="absolute top-[-5rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[102px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
 
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 2</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 2</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
                 <div class="absolute top-[-5rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[102px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
 
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 3</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 3</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
 
                 <div class="absolute top-[-5rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[102px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 4</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 4</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
                 <div class="absolute top-[-5rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[102px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 5</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 5</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
         </div>
@@ -379,13 +379,13 @@
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
 
 
@@ -395,62 +395,62 @@
                     class="absolute top-[-10rem] left-auto right-[-22px] sm:left-[calc(50%-70px)] sm:right-auto transform -translate-y-2 text-left sm:text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                     <!-- <div class="absolute top-[-5rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300"> -->
 
-                    <p class="text-sm font-bold text-gray-800">Person 6</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 6</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-10rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 7</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 7</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-10rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 8</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 8</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
             <div class="person relative group">
                 <div class="absolute top-[-10rem] left-1/2 transform -translate-x-1/2">
                     <!-- Vertical Line -->
-                    <div
+                    <!-- <div
                         class="bg-black h-[180px] w-[1px] opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                     <!-- Round Pointer -->
-                    <div
+                    <!-- <div
                         class="absolute top-[-5px] left-[-2.5px] w-1.5 h-1.5 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    </div>
+                    </div> -->
                 </div>
                 <img src="/png-team/team01.png" alt="Person X" class="w-24 h-auto sm:w-32">
                 <div
                     class="absolute top-[-10rem] left-[calc(50%-70px)] transform -translate-y-2 text-left opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                    <p class="text-sm font-bold text-gray-800">Person 9</p>
-                    <p class="text-xs text-gray-500">Designation</p>
+                    <!-- <p class="text-sm font-bold text-gray-800">Person 9</p>
+                    <p class="text-xs text-gray-500">Designation</p> -->
                 </div>
             </div>
         </div>
