--- a/team.html
+++ b/team.html
@@ -36,6 +36,11 @@
             color: #ea4294;
             font-family: 'Lato', sans-serif;
         }
+
+        .temp-green-bg {
+                background: #24d56d;
+                border-radius: 50%;
+        }
     </style>
 </head>
 
@@ -141,10 +146,10 @@
             <!-- Person 1 -->
             <div class="w-full pt-10 flex flex-col sm:flex-row gap-6 sm:gap-10 items-center">
                 <div class="relative flex justify-center sm:w-2/5">
-                    <img src="/png-team/specs-dude.png" alt="Person 1"
-                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain">
-                    <img src="/png-team/base.png" alt="Circle"
-                        class="absolute bottom-[-15%] w-48 sm:w-56 md:w-60 object-contain">
+                    <img src="/png-team/gopi-image.png" alt="Person 1"
+                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain temp-green-bg">
+                    <!-- <img src="/png-team/base.png" alt="Circle"
+                        class="absolute bottom-0  w-[20rem] sm:w-[16.30rem] md:w-70 object-contain"> -->
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">GOPI PRASANNAA </h2>
@@ -174,10 +179,10 @@
             <!-- Person 2 -->
             <div class="w-full pt-24 sm:pt-20 flex flex-col sm:flex-row-reverse gap-6 sm:gap-10 items-center">
                 <div class="relative flex justify-center sm:w-2/5">
-                    <img src="/png-team/beard-dude.png" alt="Person 2"
-                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain">
-                    <img src="/png-team/base.png" alt="Circle"
-                        class="absolute bottom-[-15%] w-48 sm:w-56 md:w-60 object-contain">
+                    <img src="/png-team/uday-image.png" alt="Person 2"
+                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain temp-green-bg">
+                    <!-- <img src="/png-team/base.png" alt="Circle"
+                        class="absolute bottom-0  w-48 sm:w-56 md:w-60 object-contain"> -->
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">S V UDAYAKUMAR</h2>
@@ -204,10 +209,10 @@
             <!-- Person 3 -->
             <div class="w-full pt-24 sm:pt-32 flex flex-col sm:flex-row gap-6 sm:gap-10 items-center">
                 <div class="relative flex justify-center sm:w-2/5">
-                    <img src="/png-team/young-dude.png" alt="Person 3"
-                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain">
-                    <img src="/png-team/base.png" alt="Circle"
-                        class="absolute bottom-[-15%] sm:bottom-[-25%] w-48 sm:w-56 md:w-60 object-contain">
+                    <img src="/png-team/vinoth-image.png" alt="Person 3"
+                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain temp-green-bg">
+                    <!-- <img src="/png-team/base.png" alt="Circle"
+                        class="absolute bottom-0  w-48 sm:w-56 md:w-60 object-contain"> -->
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">VINOTH C</h2>
@@ -233,10 +238,10 @@
             <!-- Person 4 -->
             <div class="w-full pt-24 sm:pt-32 flex flex-col sm:flex-row-reverse gap-6 sm:gap-10 items-center">
                 <div class="relative flex justify-center sm:w-2/5">
-                    <img src="/png-team/girl.png" alt="Person 4"
-                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain">
-                    <img src="/png-team/base.png" alt="Circle"
-                        class="absolute bottom-[-15%] w-48 sm:w-56 md:w-60 object-contain">
+                    <img src="/png-team/vaasan-image.png" alt="Person 4"
+                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain temp-green-bg">
+                    <!-- <img src="/png-team/base.png" alt="Circle"
+                        class="absolute bottom-0  w-48 sm:w-56 md:w-60 object-contain"> -->
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">Vasan S</h2>
