--- a/team.html
+++ b/team.html
@@ -210,7 +210,7 @@
             <div class="w-full pt-24 sm:pt-32 flex flex-col sm:flex-row gap-6 sm:gap-10 items-center">
                 <div class="relative flex justify-center sm:w-2/5">
                     <img src="/png-team/vinoth-image.png" alt="Person 3"
-                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain temp-green-bg">
+                        class="relative w-48 sm:w-56 md:w-60 z-10 object-contain temp-green-bg max-h-[260px]">
                     <!-- <img src="/png-team/base.png" alt="Circle"
                         class="absolute bottom-0  w-48 sm:w-56 md:w-60 object-contain"> -->
                 </div>
