--- a/team.html
+++ b/team.html
@@ -245,7 +245,7 @@
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">Vasan S</h2>
-                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase mb-5">chief technology officer</p>
+                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase mb-5">VP - Technology</p>
                     <p class="text-[15px] mt-2">
                         Vasan S is an accomplished entrepreneur with a strong foundation in computer science, holding a
                         degree from IIT Madras. With early career stints at NYSE and Enguage in Atlanta, he returned to
