about us page changes

--- a/aboutus.html
+++ b/aboutus.html
@@ -256,7 +256,7 @@
             </div>
 
             <!-- "WE GROW IDEAS" Section -->
-            <div class="pt-16 md:absolute md:top-[10%] md:left-[10%] md:w-[30%] w-full slide-in section-1-text">
+            <div class="pt-16 md:absolute md:top-[20%] md:left-[10%] md:w-[30%] w-full slide-in section-1-text">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 uppercase">Our vision</h2>
                 <p class="text-gray-600 w-full md:w-[74%]">
                     To transform every brand story from a blank page into a powerful narrative that resonates, inspires,
@@ -266,7 +266,7 @@
 
             <!-- Office Image -->
             <div
-                class="mt-8 md:absolute md:top-[5%] md:left-[50%] md:w-[30%] md:h-[30%] w-full slide-in section-1-image">
+                class="mt-8 md:absolute md:top-[20%] md:left-[50%] md:w-[30%] md:h-[30%] w-full slide-in section-1-image">
                 <img src="/about-assets/body-image-1.png" alt="Modern office space"
                     class="w-full md:object-contain shadow-lg" />
             </div>
@@ -276,7 +276,7 @@
         <div class="min-h-screen w-full relative overflow-hidden sm:overflow-visible px-4 md:px-0">
             <!-- Green Accent Blocks - Hidden on small screens -->
             <div
-                class="hidden md:block absolute h-[5%] w-[20%] right-0 sm:top-[15%] sm:w-[16%] bg-[url('/about-assets/green-box-1.png')] slide-in green-box-1">
+                class="hidden md:block absolute h-[5%] w-[20%] right-0 sm:top-[20%] sm:w-[16%] bg-[url('/about-assets/green-box-1.png')] slide-in green-box-1">
             </div>
             <div
                 class="block absolute bottom-5 right-0 sm:top-[50%] sm:left-[10%] w-[40%] sm:w-[11.7%] h-[8%] sm:h-[12%] bg-[url('/about-assets/green-box-2.png')] slide-in green-box-2">
@@ -284,7 +284,7 @@
 
 
             <!-- "WE CHAMPION CLIENTS" Section -->
-            <div class="pt-10 md:absolute top-12 md:left-[55%] md:w-[25%] w-full slide-in section-2-text">
+            <div class="pt-10 md:absolute top-[15%] md:left-[55%] md:w-[25%] w-full slide-in section-2-text">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 custom-mt-10 uppercase">How we
                     work .</h2>
                 <p class="text-gray-600 w-full md:w-[75%]">
